LPS-58947 Fix Form Fields Settings Modal behavior on mobile devices.

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -73,7 +73,62 @@
 }
 
 .lfr-ddl-field-settings-modal.form-builder-field-settings {
-	width: 720px;
+	height: 100%;
+	margin: 0;
+	width: 100%;
+
+	.modal-body {
+		background-color: #FFF;
+		height: 100%;
+		max-height: 100%;
+		overflow-x: hidden;
+		overflow-y: auto;
+		padding-bottom: 0;
+	}
+
+	.modal-content.form-builder-field-settings-content {
+		border-radius: 0;
+		border-width: 0;
+		height: 100%;
+		padding-bottom: 85px;
+		padding-top: 62px;
+	}
+
+	.modal-footer {
+		bottom: 2px;
+
+		.btn {
+			width: auto;
+		}
+	}
+
+	.modal-header {
+		position: absolute;
+		top: 0;
+		width: 100%;
+	}
+
+	@include sm {
+		.modal-content.form-builder-field-settings-content {
+			border-radius: 4px;
+			padding-bottom: 80px;
+		}
+	}
+
+	@include lg {
+		.modal-body {
+			max-height: 451px;
+		}
+
+		.modal-content.form-builder-field-settings-content {
+			padding-bottom: inherit;
+			padding-top: 0;
+		}
+
+		.modal-header {
+			position: initial;
+		}
+	}
 
 	.form-builder-field-settings-content {
 		.has-error .key-value-editor {
@@ -164,8 +219,6 @@
 		}
 
 		.lfr-ddm-form-container {
-			padding: 0 50px;
-
 			.lfr-ddm-form-field-container {
 				position: relative;
 
@@ -208,10 +261,6 @@
 					&.advanced {
 						display: block;
 					}
-
-					&.basic {
-						padding-bottom: 65px;
-					}
 				}
 
 				&.advanced {
@@ -221,14 +270,6 @@
 					padding: 20px 50px;
 				}
 			}
-		}
-
-		.modal-body {
-			background-color: #FFF;
-			max-height: 500px;
-			overflow-x: hidden;
-			overflow-y: auto;
-			padding-bottom: 0;
 		}
 
 		.settings-toggler {
@@ -252,10 +293,32 @@
 	}
 }
 
+@include sm {
+	.lfr-ddl-field-settings-modal.form-builder-field-settings {
+		height: 670px;
+		padding-top: 85px;
+		width: 390px;
+	}
+}
+
+@include md {
+	.lfr-ddl-field-settings-modal.form-builder-field-settings {
+		height: 676px;
+		width: 720px;
+	}
+}
+
 .lfr-ddl-form-builder-field-types-modal {
 	max-height: 550px;
 	outline: none;
+	padding-top: 73px;
 	width: 500px;
+
+	@include sm {
+		&.modal-dialog {
+			width: 392px;
+		}
+	}
 
 	&.lfr-ddl-form-builder-field-types-modal-hidden {
 		display: none;
@@ -266,9 +329,12 @@
 		padding: 25px 35px;
 
 		.field-type {
-			float: none;
 			padding: 20px 0;
-			width: auto;
+
+			@include md {
+				float: none;
+				width: auto;
+			}
 
 			.field-type-icon, .field-type-label {
 				color: #879CAC;
@@ -286,6 +352,12 @@
 				text-transform: capitalize;
 			}
 		}
+	}
+}
+
+@include sm {
+	.lfr-ddl-form-builder-field-types-modal {
+		padding-top: 85px;
 	}
 }
 
